[package]
name = "file"
version = "0.1.0"
edition = "2021"

[dependencies]
file-format = { version = "0.26.0", features = ["reader"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "HtmlElement",
    "Node",
    "Text",
    "Window",
] }
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
